using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class AnimationStrings : MonoBehaviour
{
    internal static string isGrounded = "isGrounded";
    internal static string isOnWall = "isOnWall";
    internal static string hasTarget = "HasTarget";
    internal static string canMove = "CanMove";
}
